@@ -1469,12 +1469,15 @@ Cancels all player killing in the room or area.
 PROP_NOPURGE=\
 Property   : Prop_NoPurge\n\r\
 Targets    : Rooms, Containers, Items\n\r\
-Parameters : \n\r\
+Parameters : ([TIMESTAMP]/[DATE-TIME]_\n\r\
 Example    : \n\r\
+Example    : 16885795721221\n\r\
+Example    : 10/31/2023 08:51am\n\r\
 Description: \n\r\
 Prevents items in the room from being destroyed as refuse over time.  When \
 placed on an item, this property makes the item immune to "garbage collection" \
-regardless of where in the world it is.
+regardless of where in the world it is.  If no parameter is given, the \
+protection will last until the next reboot, or otherwise until the time given.
 
 PROP_NORECALL=\
 Property   : Prop_NoRecall\n\r\
