@@ -1690,19 +1690,26 @@ FAMILIARITY_EDGEDWEAPON=EDGED_WEAPON_FAMILIARITY
 EDGED_WEAPON_FAMILIARITY=<ABILITY>\
 The player is familiar with edged weapons they have crafted themselves, \
 gaining an attack bonus from wielding the product of their own \
-hands.
+hands. Edged weapons include small bladed weapons on hilts, shafts \
+or pivots that do not fit into the sword, axe or pole-arm categories, \
+such as daggers, sickles and shears.
 
 SPECIALIZATION_EDGEDWEAPON=EDGED_WEAPON_SPECIALIZATION
 EDGED_WEAPON_SPECIALIZATION=<ABILITY>\
 The player is a master of sharp edges, gaining bonuses to attack when \
 using an edged weapon in combat.  Can also allow \
-the use of higher level weapons if the focus expertise is taken.
+the use of higher level weapons if the focus expertise is taken. \
+Edged weapons include small bladed weapons on hilts, shafts \
+or pivots that do not fit into the sword, axe or pole-arm categories, \
+such as daggers, sickles and shears.
 
 PROFICIENCY_EDGED_WEAPON=EDGED_WEAPON_PROFICIENCY
 EDGED_WEAPON_PROFICIENCY=<ABILITY>\
 The player is proficient with sharp edged weapons, gaining the ability to use \
 them even if their current class training would not make it \
-feasible normally.
+feasible normally. Edged weapons include small bladed weapons on hilts, shafts \
+or pivots that do not fit into the sword, axe or pole-arm categories, \
+such as daggers, sickles and shears.
 
 FIGHTER_ELBOWJAB=ELBOWJAB
 ELBOW_JAB=ELBOWJAB
