@@ -40,7 +40,7 @@ small % bench	29	40	40	450	GenChair	CHAIR	2	0
 % twelve-sided die	31	70	1	22	GenDice		12		
 % figurine	31	40	3	36	GenItem	STATUE			
 % book shelf	32	40	70	875	GenContainer		30	384	
-plain % sarcophagus	32	40	500	6125	GenBed	BED	500	64	*Prop_NoPurge;
+plain % sarcophagus	32	40	500	6125	GenBed	BED	500	64	;
 % stool	33	20	50	300	GenChair	CHAIR	1	0	
 % tub	33	60	400	8000	GenTub	CHAIR	2000	0	
 % saucer	34	15	2	9	GenContainer		5	2048	
@@ -48,7 +48,7 @@ small % box	35	15	20	90	GenContainer	LID	50	0
 % bed	36	30	200	2050	GenBed	BED	2	0	
 % oven	36	60	500	10750	GenContainer	LID	50	0	Burning
 % twenty-sided die	37	80	1	30	GenDice		20		
-% steps	37	80	400	12000	GenRideable	LADDER	3	0	Prop_NoPurge
+% steps	37	80	400	12000	GenRideable	LADDER	3	0	
 % table	38	30	250	2700	GenRideable	TABLE	150	0	
 % bench	39	80	180	5600	GenChair	CHAIR	4	0	
 % vase	40	50	6	118	GenEmptyDrink		15	65537	
@@ -86,14 +86,14 @@ long % bench	59	160	400	38500	GenChair	CHAIR	8	0
 % charger	64	20	6	72	GenContainer		20	0	
 % hundred-sided die	65	100	1	66	GenDice		100		
 % chest	65	75	60	2950	GenContainer	LOCK	250	0	
-large % ice box	65	120	600	47000	GenContainer	LID	1000	131072	*Prop_IceBox;
+large % ice box	65	120	600	47000	GenContainer	LID	1000	131072	;
 four poster % bed	66	60	800	31500	GenBed	BED	4	0	
 % hearth	66	100	1000	65250	GenRideable		250	0	Burning
 % ladder	67	40	100	2625	GenRideable	LADDER	0	0	
 % desk	68	30	300	5950	GenRideable	TABLE	100	0	
 small % crate	70	30	60	1225	GenContainer	LID	500	0	
 % giant statue	71	1000	5000	3600000	GenItem	STATUE			
-ornate % sarcophagus	72	100	1500	109000	GenBed	BED	500	64	Prop_NoPurge
+ornate % sarcophagus	72	100	1500	109000	GenBed	BED	500	64	
 % throne	73	180	150	20000	GenChair	CHAIR	1	0	
 % jacuzzi	73	80	600	35000	GenTub	CHAIR	2600	0	
 small % storage barrel	75	40	40	1180	GenContainer	LID	100	0	
